<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".translator.MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from" />

                    <Spinner
                        android:id="@+id/fromSelectorSpinner"
                        android:background="@drawable/spinner_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/select_language"
                        android:spinnerMode="dialog" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/switchTranslationImageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_compare"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/switch_translation" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/to" />

                    <Spinner
                        android:id="@+id/toSelectorSpinner"
                        android:layout_width="wrap_content"
                        android:background="@drawable/spinner_background"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_height="wrap_content"
                        android:prompt="@string/select_language"
                        android:spinnerMode="dialog" />

                </RelativeLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/fromInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_text" />

            <Button
                android:id="@+id/translateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/translate" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pick a Date"
                android:onClick="showDatePickerDialog" />

            <TextView
                android:id="@+id/toOutputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="@string/powered_by_yandex"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</layout>
